--- a/package.json
+++ b/package.json
@@ -35,5 +35,17 @@
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
     "typescript": "~4.3.2"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 12.1.2.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Gor-Madoyan/Armine.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/Gor-Madoyan/Armine/issues"
+  },
+  "homepage": "https://github.com/Gor-Madoyan/Armine#readme"
 }
