--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "karma-coverage": "~2.0.3",
     "karma-jasmine": "~4.0.0",
     "karma-jasmine-html-reporter": "~1.7.0",
-    "typescript": "~4.3.2"
+    "typescript": "~4.3.2",
+    "webpack": "^5.46.0"
   },
   "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 12.1.2.",
   "main": "karma.conf.js",
